--- a/packages/wc/index.html
+++ b/packages/wc/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Lit + TS</title>
-    <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="/src/my-element.ts"></script>
+    <title>Vite + Vue</title>
   </head>
   <body>
-    <my-element>
-      <h1>Vite + Lit</h1>
-    </my-element>
+    <div id="app">
+      <wc-selectmenu>
+        <wc-selectmenu-trigger>
+          test me
+        </wc-selectmenu-trigger>
+      <wc-selectmenu-sheet>
+        <div>test me 2</div>
+      </wc-selectmenu-sheet>
+      </wc-selectmenu>
+    </div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
